# agent_playground

./: .gitignore  README.md  agent.py  agent_api.md  agent_documentation.md  agent_googleserper.py  agent_play.ipynb  agent_with_RAG.py  agent_with_RAG_2.py  agent_with_knowledge.py  agent_with_memory.py  agent_withemail.py  interview_david.txt  interview_elena.txt  persona_memory.py  playground.py  pyproject.toml  research_workflow.py
data/: interview_elena_longer.txt
