[project]
name = "agent-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.4",
    "aiohttp>=3.11.18",
    "azure-ai-inference>=1.0.0b9",
    "chromadb>=1.0.8",
    "ipywidgets>=8.1.7",
    "lancedb>=0.22.0",
    "mcp>=1.7.1",
    "mistralai>=1.7.0",
    "openai>=1.77.0",
    "pip>=25.1.1",
    "sqlalchemy>=2.0.40",
    "tantivy>=0.24.0",
]
